profile api implementation and testing (#12)
